# multirotor

./: .gitignore  Demo.ipynb  Detailed Demo.ipynb  README.md  control.py  coords.py  env.py  helpers.py  motor.py  physics.py  setup.cfg  simulation.py  trajectories.py  vehicle.py  visualize.py
_static/: controller_classdiagram.plantuml
docs/: Detailed Demo.ipynb  Quickstart.md  conf.py  index.rst  requirements.txt
docs/_static/: vehicle_classdiagram.plantuml
multirotor/: controller.py  coords.py  env.py  helpers.py  optimize.py  physics.py  simulation.py  trajectories.py  vehicle.py  visualize.py
multirotor/controller/: __init__.py  guided.py  pid.py  scurves.py
multirotor/models/: djimavicpro.py  tarott18.py
