# See: https://setuptools.pypa.io/en/latest/userguide/quickstart.html
[metadata]
name = multirotor
version = 0.4.0
description =  Simulation testbed for multirotor vehicles.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = multirotor, simulation, gym, uav

[options]
python_requires = >= 3.7
install_requires =
    numpy
    scipy
    numba
    matplotlib
    gym
    optuna
    # https://pip.pypa.io/en/latest/topics/vcs-support/
    # can't upload to pypi with a git link
    # pyscurve @ git+https://github.com/hazrmard/py-scurve.git@v1.0.2
packages = 
    multirotor
    # TODO: move pyscurve package here

[options.extras_require]
DEV =
    twine
    build
    file: docs/requirements.txt

CONTROL =
    control

# SCURVE = 
    # pyscurve @ git+https://github.com/hazrmard/py-scurve.git@v1.0.2
