# See: https://setuptools.pypa.io/en/latest/userguide/quickstart.html
[metadata]
name = multirotor
version = 0.4.4
description =  Simulation testbed for multirotor vehicles.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = multirotor, simulation, gym, uav

[options]
python_requires = >= 3.7
install_requires =
    numpy
    scipy
    numba
    matplotlib
    gym
    optuna
    # https://pip.pypa.io/en/latest/topics/vcs-support/
    # can't upload to pypi with a git link
    # pyscurve @ git+https://github.com/hazrmard/py-scurve.git@v1.0.2
packages = 
    multirotor
    multirotor.controller
    multirotor.models
    # TODO: move pyscurve package here

[options.extras_require]
DEV =
    twine
    build
    jupyter
    # Dependencies for building docs:
    # file: docs/requirements.txt
    # sphinx==6.1.0
    # sphinx-autoapi==3.0.0
    # numpydoc==1.5.0
    # myst-parser==2.0.0
    # myst-nb

CONTROL =
    control

# SCURVE = 
    # pyscurve @ git+https://github.com/hazrmard/py-scurve.git@v1.0.2
